--- a/com.cloudera.companies.data/pom.xml
+++ b/com.cloudera.companies.data/pom.xml
@@ -4,12 +4,12 @@
 	<groupId>com.cloudera.companies</groupId>
 	<artifactId>com.cloudera.companies.data</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 
 	<parent>
 		<groupId>com.cloudera</groupId>
 		<artifactId>com.cloudera.companies</artifactId>
-		<version>1.0.0</version>
+		<version>1.0.1-SNAPSHOT</version>
 	</parent>
 
 	<build>
