--- a/com.cloudera.companies.repo/com.cloudera.companies.repo.bom/com.cloudera.companies.repo.bom.cdh/com.cloudera.companies.repo.bom.cdh.api/pom.xml
+++ b/com.cloudera.companies.repo/com.cloudera.companies.repo.bom/com.cloudera.companies.repo.bom.cdh/com.cloudera.companies.repo.bom.cdh.api/pom.xml
@@ -4,12 +4,12 @@
 	<groupId>com.cloudera.companies.repo.bom.cdh</groupId>
 	<artifactId>com.cloudera.companies.repo.bom.cdh.api</artifactId>
 	<packaging>pom</packaging>
-	<version>1.0.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 
 	<parent>
 		<groupId>com.cloudera.companies.repo.bom</groupId>
 		<artifactId>com.cloudera.companies.repo.bom.cdh</artifactId>
-		<version>1.0.0</version>
+		<version>1.0.1-SNAPSHOT</version>
 	</parent>
 
 	<modules>
