--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>com.cloudera</groupId>
 	<artifactId>com.cloudera.companies</artifactId>
 	<packaging>pom</packaging>
-	<version>1.0.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 
 	<scm>
 		<connection>scm:git:git@github.com:ggear/cloudera-companies.git</connection>
