--- a/com.cloudera.companies.core/com.cloudera.companies.core.test.system/pom.xml
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.test.system/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.cloudera.companies.core</groupId>
-	<artifactId>com.cloudera.companies.core.test.remote</artifactId>
+	<artifactId>com.cloudera.companies.core.test.system</artifactId>
 	<packaging>jar</packaging>
 	<version>1.1.0-SNAPSHOT</version>
 
