--- a/com.cloudera.companies.core/pom.xml
+++ b/com.cloudera.companies.core/pom.xml
@@ -16,10 +16,12 @@
 		<module>com.cloudera.companies.core.test</module>
 		<module>com.cloudera.companies.core.common</module>
 		<module>com.cloudera.companies.core.ingest</module>
+		<module>com.cloudera.companies.core.load</module>
+		<module>com.cloudera.companies.core.process</module>
 		<module>com.cloudera.companies.core.query</module>
 		<module>com.cloudera.companies.core.assembly</module>
-		<module>com.cloudera.companies.core.test.local</module>
-		<module>com.cloudera.companies.core.test.remote</module>
+		<module>com.cloudera.companies.core.test.driver</module>
+		<module>com.cloudera.companies.core.test.system</module>
 	</modules>
 
 	<dependencies>
